--- a/Proyecto/nbproject/project.properties
+++ b/Proyecto/nbproject/project.properties
@@ -30,7 +30,9 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.Apache_POI.classpath}
+    ${libs.Apache_POI.classpath}:\
+    ${libs.Jfreechart.classpath}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
