--- a/Proyecto/nbproject/project.properties
+++ b/Proyecto/nbproject/project.properties
@@ -33,7 +33,8 @@ javac.classpath=\
     ${libs.Apache_POI.classpath}:\
     ${libs.Jfreechart.classpath}:\
     ${libs.absolutelayout.classpath}:\
-    ${libs.JFreeChart.classpath}
+    ${libs.JFreeChart.classpath}:\
+    ${libs.jxl.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
