--- a/Proyecto/nbproject/project.properties
+++ b/Proyecto/nbproject/project.properties
@@ -27,6 +27,8 @@ dist.dir=dist
 dist.jar=${dist.dir}/Proyecto.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jfreechart-1.0.19.zip=..\\jfreechart-1.0.19.zip
+file.reference.jxl.jar=..\\jxl.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -34,7 +36,9 @@ javac.classpath=\
     ${libs.Jfreechart.classpath}:\
     ${libs.absolutelayout.classpath}:\
     ${libs.JFreeChart.classpath}:\
-    ${libs.jxl.classpath}
+    ${libs.jxl.classpath}:\
+    ${file.reference.jxl.jar}:\
+    ${file.reference.jfreechart-1.0.19.zip}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
